# mirror

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
examples/: Build.mrp  array.mr  final.mr  function.mr  function_arg.mr  function_block.mr  hello_world.mr  loop.mr  loop_bool.mr  match.mr  method.mr  type.mr  variable.mr
mrrc/: CMakeLists.txt
mrrc/include/mirror/: Errors.hpp
mrrc/include/mirror/compiler/: Compiler.hpp
mrrc/include/mirror/lexer/: Lexer.hpp  StringWalker.hpp  Token.hpp  TokenStream.hpp
mrrc/include/mirror/lexer/tokenizers/: CommentTokenizer.hpp  Tokenizer.hpp  Tokenizers.hpp
mrrc/src/: main.cpp
mrrc/src/compiler/: Compiler.cpp
mrrc/src/lexer/: Lexer.cpp  StringWalker.cpp  TokenStream.cpp
mrrc/src/lexer/tokenizers/: CommentTokenizer.cpp  Tokenizer.cpp  Tokenizers.cpp
mrrc/src/mirror/: config.hpp
mrrc/src/mirror/ast/: BaseExpression.hpp  FunctionCallExpression.cpp  FunctionCallExpression.hpp  FunctionExpression.cpp  FunctionExpression.hpp  ScopeExpression.cpp  ScopeExpression.hpp  StringExpression.cpp  StringExpression.hpp  Type.cpp  Type.hpp  Variable.cpp  Variable.hpp  VariableExpression.cpp  VariableExpression.hpp  mrrexpr.cpp  mrrexpr.hpp  mrrp.cpp  mrrp.hpp
mrrc/src/mirror/ast/expressions/: base.cpp  base.hpp  control.cpp  control.hpp  core.cpp  core.hpp  function.cpp  function.hpp  type.cpp  type.hpp
mrrc/src/mirror/compiler/: mrrc.cpp  mrrc.hpp
mrrc/src/mirror/lexer/: Lexer.cpp  Lexer.hpp  Token.hpp  TokenQueue.cpp  TokenQueue.hpp  TokenStream.cpp  TokenStream.hpp  mrrl.cpp  mrrl.hpp
mrrc/src/mirror/mrp/: MRPParser.cpp  MRPParser.hpp  Project.hpp  TranslationUnit.cpp  TranslationUnit.hpp
mrrc/src/mirror/parser/: Parser.cpp  Parser.hpp
mrrc/src/mirror/utility/: FileParser.cpp  FileParser.hpp  Log.cpp  Log.hpp  from_args.cpp  from_args.hpp  from_debug.hpp  log.cpp  log.hpp  macros.hpp
mrrc/src/utility/: HelpMessage.hpp
mrrc/src/utility/cli/: CLIParser.cpp  CLIParser.hpp
tests/input/: TokenCheck.mr
